# PITSEC_-_Understand_Pred_AI

./: .gitignore  README.md  pyproject.toml  requirements.txt
New-approach/: .gitignore
New-approach/src/dataio/: cls_dataset_stream.py  det_dataset.py  det_transforms.py  split_utils.py  voc_parser.py
New-approach/src/models/: fasterrcnn.py  resnet.py
New-approach/src/setup/: config_cls.py  config_det.py  test_config_det.py
New-approach/src/train/: test_train_shapes.py  train_classifier.py  train_cls_cpu_big.py  train_shapes.py  train_squares_cpu_big.py
New-approach/src/utils/: cls_viz.py  device_utils.py  (+3 more)
configs/cls/: default.yaml  test.yaml
configs/det/: default.yaml  default_cust.yaml  default_cust_extr.yaml  default_custom.yaml  test.yaml  test_cust.yaml  test_cust_extr.yaml  test_custom.yaml
configs/xai/: cls.yaml  det.yaml
docs/: PROJECT_STRUCTURE.md  README.md
requirements/: base.txt  cpu.txt  gpu.txt
scripts/: check_data.py
scripts/cls/: captum.py  counterfactuals.py  eval.py  explain.py  gradcam.py  test.py  train.py
scripts/det/: captum_roi.py  counterfactuals.py  eval.py  explain.py  roi_heatmap.py  rpn_heatmap.py  sandbox.py  test.py  train.py
src/constants/: norms.py  sizes.py
src/data/: cls.py  det.py  split.py  voc.py
src/metrics/: __init__.py  ar.py  aspect_ratio.py  cls.py  det.py
src/models/: cls_resnet.py  det_fasterrcnn.py
src/transforms/: cls.py  det.py  det_experimental.py
src/utils/: config.py  determinism.py  echo.py  vis.py
src/xai/: gradcam.py  integrated_gradients.py  occlusion.py  rise.py  scorecam.py
(+17 files in other folders)
